--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <span data-sr='top wait 1.4s 90px'>n</span>
     <span data-sr='top wait 1.5s 90px'>!</span>
   </h1>
+  <p data-sr='bottom wait 1.5s 90px'>Layered Farming with High Yield Stable Coin Staking.</p>
   <p data-sr='bottom wait 1.5s 90px'>Follow us on social media for the latest updates.</p>
   <div class='social-media'>
     <ul>
