--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </a>
       </li>
       <li data-sr='top wait 2.1s 90px'>
-        <a href='https://github.com/vesq'>
+        <a href='https://github.com/VESQHQ'>
           <i class='fab fa-github'></i>
         </a>
       </li>
