--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Vesq | Vesq is coming soon.</title>
+  <title>Vesq | Coming soon.</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Varela+Round'>
 <script src="https://kit.fontawesome.com/f8290c4ecd.js" crossorigin="anonymous"></script>
